# activity

./: .gitignore  CNAME  Dockerfile  Makefile  README.md  devspace.yaml  devspace_start.sh  pyproject.toml  tox.ini
.github/workflows/: main.yml  release.yml
ansible/: deploy.yml  inventory
src/activity/: __main__.py  app.py  logging.py  metrics.py
src/activity/cli/: server.py
src/activity/web/: meta.py
tests/: conftest.py  test_activity.py
tests/web/: conftest.py
