[tool.poetry]
name = "activity"
version = "0.1.0"
description = "Personal workout activities"
authors = ["Kirill Sumorokov <sumorokov.k@gmail.com>"]
license = "MIT"
packages = [
    { include = "activity", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^21.4.0"
aiohttp = "^3.8.1"
marshmallow = "^3.16.0"

[tool.poetry.dev-dependencies]
coverage = "^6.4.1"
flake8 = "^4.0.1"
flake8-aaa = "^0.12.2"
flake8-bugbear = "^22.4.25"
flake8-builtins-unleashed = "^1.3.1"
flake8-comprehensions = "^3.10.0"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
flake8-print = "^5.0.0"
flake8-pytest = "^1.3"
mypy = "^0.961"
black = "^22.3.0"
ipdb = "^0.13.9"
ipython = "^8.4.0"
pytest = "^7.1.2"
pytest-aiohttp = "^1.0.4"
pytest-cov = "^3.0.0"
pytest-flake8 = "^1.1.1"
pytest-mock = "^3.7.0"
pytest-mypy = "^0.9.1"
pytest-xdist = {extras = ["psutil"], version = "^2.5.0"}
pytest-black = "^0.3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
